--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
+    <h1>Hello from Electron renderer!</h1>
+    <p id="info"></p>
   </body>
+  <script src="./render.js"></script>
 </html>
